Add tests for User domain